Add a missing WebFrame pointer in MessageFromJSONString.

Fixes the following two browser tests for UAv2:
- ExtensionBindingsApiTest.UserGestureFromExtensionMessageTest
- MessagingApiTest.MessagingUserGesture

Bug: 860509
Change-Id: I3a70c3d3fa7a6dd8351422399193e9b49c63bd0d
Reviewed-on: https://chromium-review.googlesource.com/c/1335782
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608396}