extensions/renderer/messaging_util.cc
@@ -15,6 +15,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "extensions/common/extension.h"
 #include "extensions/common/manifest.h"
 #include "extensions/common/manifest_handlers/background_info.h"
+#include "extensions/renderer/get_script_context.h"
 #include "extensions/renderer/script_context.h"
 #include "gin/converter.h"
 #include "gin/dictionary.h"
@@ -76,7 +77,10 @@ std::unique_ptr<Message> MessageFromV8(v8::Local<v8::Context> context,
     return nullptr;
   }
 
-  return MessageFromJSONString(isolate, stringified, error_out);
+  ScriptContext* script_context = GetScriptContextFromV8Context(context);
+  blink::WebLocalFrame* web_frame =
+      script_context ? script_context->web_frame() : nullptr;
+  return MessageFromJSONString(isolate, stringified, error_out, web_frame);
 }
 
 std::unique_ptr<Message> MessageFromJSONString(
